Refactor UserPlane class to improve shooting mechanics