@@ -1,358 +1,376 @@
-# Plane Shooter Game
-
-A 2D side-scrolling plane shooter game developed in Java using JavaFX. Control your plane, defeat enemies and bosses across multiple levels, collect power-ups, and upgrade your plane to achieve victory.
-
----
-
-## Table of Contents
-
-- [GitHub Repository](#github-repository)
-- [Compilation and Dependencies](#compilation-and-dependencies)
-- [Implemented Features](#implemented-features)
-- [Features with Issues](#features-with-issues)
-- [Unimplemented Features](#unimplemented-features)
-- [New Java Classes](#new-java-classes)
-- [Modified Java Classes](#modified-java-classes)
-- [Unexpected Issues and Solutions](#unexpected-issues-and-solutions)
-
----
+# COMP2042 Junru Wang Coursework
 
 ## GitHub Repository
 
-The source code for the Plane Shooter Game can be found at:
+You can view the GitHub repository for this project here: [https://github.com/fsfuzhu/CW2024](https://github.com/fsfuzhu/CW2024)
 
-[https://github.com/fsfuzhu/CW2024](https://github.com/fsfuzhu/CW2024)
+## Build Guide
 
----
+This project uses [Maven](https://maven.apache.org/) for building and depends on [JavaFX](https://openjfx.io/) and JUnit for testing. Below are the steps to compile and run the project.
 
-## Compilation and Dependencies
+### Requirements
 
-### Prerequisites
+1. **Java Development Kit (JDK) 19**  
+   Ensure that JDK 19 is installed on your system. Set the `JAVA_HOME` environment variable to point to your JDK installation directory.
 
-- **Java Development Kit (JDK)**: Version **19.0.2** or higher is required.
-- **JavaFX SDK**: Ensure JavaFX is properly set up, as it is not bundled with JDK 19.
-- **Development Environment**: IntelliJ IDEA, Eclipse, or other Java IDEs.
+2. **Maven**  
+   Install Maven version 3.8.x or higher. Ensure that the `mvn` command is available in your terminal.  
+   Reference: [Maven Installation Guide](https://maven.apache.org/install.html)
 
-### Steps to Compile and Run
+3. **IntelliJ IDEA (Recommended)**  
+   This project is developed using IntelliJ IDEA. Ensure that you have [IntelliJ IDEA](https://www.jetbrains.com/idea/) installed and properly configured.
 
-1. **Clone the Repository**:
+### Build Steps
 
+1. **Clone the Repository**  
+   Open your terminal and execute:  
    ```bash
    git clone https://github.com/fsfuzhu/CW2024.git
-   cd CW2024
-   git checkout 20241208
    ```
 
-2. **Configure JavaFX**:
+2. **Navigate to Project Directory**  
+   ```bash
+   cd CW2024
+   ```
+
+3. **Compile the Code**  
+   Use Maven to clean and compile the project:  
+   ```bash
+   mvn clean compile
+   ```
+   This command will download all necessary dependencies and compile the code.
+
+4. **Run the Application**  
+   The project uses the JavaFX Maven plugin to run the application. Execute:  
+   ```bash
+   mvn javafx:run
+   ```
+   This command will build and launch the application's GUI.
+
+### Additional Notes
+
+- The `pom.xml` file includes all required dependencies, including JavaFX controls, FXML, Graphics, Media, Swing components, and the JUnit testing framework.
+- If you encounter issues with missing JavaFX components or version mismatches during runtime, ensure that you have the JavaFX SDK version specified in `pom.xml` installed. Alternatively, adjust the version in `pom.xml` to match your environment.
+
+## File Change List
+
+### Original Files (Before Changes)
+
+```
+.\src\main\java\module-info.java
+.\src\main\java\com\example\demo\ActiveActor.java
+.\src\main\java\com\example\demo\ActiveActorDestructible.java
+.\src\main\java\com\example\demo\Boss.java
+.\src\main\java\com\example\demo\BossProjectile.java
+.\src\main\java\com\example\demo\Destructible.java
+.\src\main\java\com\example\demo\EnemyPlane.java
+.\src\main\java\com\example\demo\EnemyProjectile.java
+.\src\main\java\com\example\demo\FighterPlane.java
+.\src\main\java\com\example\demo\GameOverImage.java
+.\src\main\java\com\example\demo\HeartDisplay.java
+.\src\main\java\com\example\demo\LevelOne.java
+.\src\main\java\com\example\demo\LevelParent.java
+.\src\main\java\com\example\demo\LevelTwo.java
+.\src\main\java\com\example\demo\LevelView.java
+.\src\main\java\com\example\demo\LevelViewLevelTwo.java
+.\src\main\java\com\example\demo\Projectile.java
+.\src\main\java\com\example\demo\ShieldImage.java
+.\src\main\java\com\example\demo\UserPlane.java
+.\src\main\java\com\example\demo\UserProjectile.java
+.\src\main\java\com\example\demo\WinImage.java
+.\src\main\java\com\example\demo\controller\Controller.java
+.\src\main\java\com\example\demo\controller\Main.java
+```
+
+### Updated Files (After Changes)
+
+```
+.\src\main\java\module-info.java
+.\src\main\java\com\example\demo\actors\Actor\Actor.java
+.\src\main\java\com\example\demo\actors\Actor\ActorLevelUp.java
+.\src\main\java\com\example\demo\actors\Actor\Boss.java
+.\src\main\java\com\example\demo\actors\Actor\BossTwo.java
+.\src\main\java\com\example\demo\actors\Actor\EnemyPlaneOne.java
+.\src\main\java\com\example\demo\actors\Actor\EnemyPlaneTwo.java
+.\src\main\java\com\example\demo\actors\Actor\HeartItem.java
+.\src\main\java\com\example\demo\actors\Actor\Shield.java
+.\src\main\java\com\example\demo\actors\Actor\UserPlane.java
+.\src\main\java\com\example\demo\actors\Projectile\BossProjectile.java
+.\src\main\java\com\example\demo\actors\Projectile\BossTwoProjectile.java
+.\src\main\java\com\example\demo\actors\Projectile\BulletFactory.java
+.\src\main\java\com\example\demo\actors\Projectile\EnemyProjectile.java
+.\src\main\java\com\example\demo\actors\Projectile\Projectile.java
+.\src\main\java\com\example\demo\actors\Projectile\UserProjectile.java
+.\src\main\java\com\example\demo\components\AnimationComponent.java
+.\src\main\java\com\example\demo\components\CollisionComponent.java
+.\src\main\java\com\example\demo\components\HealthComponent.java
+.\src\main\java\com\example\demo\components\MovementComponent.java
+.\src\main\java\com\example\demo\components\ShootingComponent.java
+.\src\main\java\com\example\demo\components\SoundComponent.java
+.\src\main\java\com\example\demo\controller\Controller.java
+.\src\main\java\com\example\demo\controller\Main.java
+.\src\main\java\com\example\demo\interfaces\Destructible.java
+.\src\main\java\com\example\demo\interfaces\Hitbox.java
+.\src\main\java\com\example\demo\interfaces\LevelChangeListener.java
+.\src\main\java\com\example\demo\interfaces\ObjectFactory.java
+.\src\main\java\com\example\demo\levels\LevelOne.java
+.\src\main\java\com\example\demo\levels\LevelParent.java
+.\src\main\java\com\example\demo\levels\LevelThree.java
+.\src\main\java\com\example\demo\levels\LevelTwo.java
+.\src\main\java\com\example\demo\ui\GameOverImage.java
+.\src\main\java\com\example\demo\ui\HeartDisplay.java
+.\src\main\java\com\example\demo\ui\MainMenu.java
+.\src\main\java\com\example\demo\ui\SettingsPage.java
+.\src\main\java\com\example\demo\ui\WinImage.java
+.\src\main\java\com\example\demo\utils\GameSettings.java
+.\src\main\java\com\example\demo\utils\KeyBindings.java
+.\src\main\java\com\example\demo\utils\ObjectPool.java
+.\src\test\java\com\example\demo\actors\Actor\BossTest.java
+.\src\test\java\com\example\demo\actors\Actor\BossTwoTest.java
+.\src\test\java\com\example\demo\actors\Projectile\ProjectileTest.java
+.\src\test\java\com\example\demo\components\CollisionComponentTest.java
+.\src\test\java\com\example\demo\components\HealthComponentTest.java
+.\src\test\java\com\example\demo\components\MovementComponentTest.java
+```
 
-   - **For IDEs**:
-     - Add the JavaFX library to your project settings.
-     - In **VM options**, include:
+## Change Overview
 
-       ```
-       --module-path /path/to/javafx-sdk-19/lib --add-modules javafx.controls,javafx.fxml
-       ```
+This update involves reorganizing the project's file structure, refactoring classes, and introducing new functionalities. Below is a detailed categorization of the changes:
 
-     - Replace `/path/to/javafx-sdk-19/lib` with the actual path to your JavaFX SDK `lib` directory.
+### Deleted Files/Classes
 
-   - **For Command Line**:
-     - Ensure the JavaFX SDK `lib` directory is included in your classpath.
-     - Compile and run the game using the following commands:
+- **Base Classes Removed and Split:**
+  - `ActiveActor.java`, `ActiveActorDestructible.java`, `FighterPlane.java`, `EnemyPlane.java`, etc., have been deleted.
+  - The functionalities of these classes have been integrated into the new `Actor` base class and related components (e.g., `MovementComponent`, `HealthComponent`, `ShootingComponent`, etc.) for better modularization and management.
 
-       ```bash
-       javac --module-path /path/to/javafx-sdk-19/lib --add-modules javafx.controls,javafx.fxml -d out $(find ./src -name "*.java")
-       java --module-path /path/to/javafx-sdk-19/lib --add-modules javafx.controls,javafx.fxml -cp out com.example.demo.controller.Main
-       ```
+- **UI Classes Merged:**
+  - `LevelViewLevelTwo.java`, `ShieldImage.java`, etc., have been merged into new classes such as `LevelView`, `Shield`, etc., and no longer exist as separate files.
 
-3. **Run the Game**:
+### Added Files/Classes
 
-   - **From IDE**:
-     - Locate the `Main` class in the `com.example.demo.controller` package.
-     - Run the `Main` class.
+- **Component Classes:**
+  - `AnimationComponent.java`, `CollisionComponent.java`, `HealthComponent.java`, `MovementComponent.java`, `ShootingComponent.java`, `SoundComponent.java`  
+    Introduced component classes for managing animation, collision detection, health, movement logic, shooting behavior, and sound effects, achieving high modularity and reusability.
 
-   - **From Command Line**:
-     - Use the commands provided above to compile and run.
+- **Utility Classes and Interfaces:**
+  - `GameSettings.java`, `KeyBindings.java`, `ObjectPool.java`, `Destructible.java`, `Hitbox.java`, `LevelChangeListener.java`, `ObjectFactory.java`  
+    Added utility classes and interfaces for managing game settings, key bindings, object pooling, and defining essential interfaces, enhancing the project's extensibility and flexibility.
 
----
+- **UI Classes:**
+  - `MainMenu.java`, `SettingsPage.java`  
+    Added main menu and settings page classes, providing functionalities for game start, settings adjustments, and exiting.
 
-## Implemented Features
+- **Level Classes:**
+  - `LevelThree.java`  
+    Added a third level class, expanding the game's level content and challenge.
 
-The following features have been correctly implemented:
+- **Actors / Projectile Related Classes:**
+  - `Actor.java`, `ActorLevelUp.java`, `BossTwo.java`, `EnemyPlaneOne.java`, `EnemyPlaneTwo.java`, `HeartItem.java`, `Shield.java`  
+    Added and refactored various Actor classes to support more complex game logic and interactive behaviors.
 
-### 1. Multiple Levels
+  - `BossTwoProjectile.java`, `BulletFactory.java`  
+    Added BossTwo's projectile classes and a BulletFactory class to support the creation and management of different projectile types.
 
-- **Level One**: Basic enemies spawn, and the player must eliminate enemies to advance.
-- **Level Two**: Introduces the first boss with shielding mechanics.
-- **Level Three**: Final boss with advanced attack patterns.
+### Modified and Renamed Files/Classes
 
-### 2. Player Plane Controls
+- **Class Locations and Package Structure Adjustments:**
+  - Multiple classes have been moved from the `com.example.demo` package to more refined package structures such as `com.example.demo.actors.Actor`, `com.example.demo.actors.Projectile`, `com.example.demo.components`, `com.example.demo.levels`, `com.example.demo.ui`, `com.example.demo.utils`, etc., improving code organization and maintainability.
 
-- **Movement**: Player can move up, down, left, and right using default arrow keys.
-- **Customizable Controls**: Players can customize key bindings via the `KeyBindings` class.
-- **Automatic Shooting**: The player's plane fires bullets automatically at a set fire rate.
+- **Functionality Refactoring and Componentization:**
+  - The original `Boss` class has been refactored into `BossTwo.java`, integrating animation, sound, and collision detection functionalities via components.
+  - The `UserProjectile.java` class now includes dynamic image switching and object pooling mechanisms to enhance projectile management efficiency and flexibility.
 
-### 3. Enemies and Bosses
+- **UI Classes Refactored and Optimized:**
+  - `WinImage.java` and `GameOverImage.java` have been moved to the `com.example.demo.ui` package and simplified UI management logic with unified display methods.
+  - `HeartDisplay.java` has been optimized with an `HBox` container for better arrangement and display of heart icons, enhancing visual effects and dynamic update capabilities.
 
-- **Enemy Planes**: Standard enemies with basic behaviors.
-- **Bosses**: Bosses have unique behaviors, health bars, and special attacks.
+### Merged/Renamed Files
 
-### 4. Power-Ups and Upgrades
+- **Base Classes Merged and Split:**
+  - The functionalities of the original `ActiveActor` and `ActiveActorDestructible` classes have been split and integrated into the new `Actor` base class and its components, achieving single-responsibility and modular management.
 
-- **Weapon Power-Ups**: Collectibles that increase fire rate and add extra bullet rows.
-- **Health Items**: Collectible hearts that restore player's health.
-- **Plane Upgrades**: Visual changes to the player's plane upon collecting power-ups.
+- **Projectile Classes Refactored:**
+  - `BossProjectile.java` and `UserProjectile.java` have been refactored and moved to the `com.example.demo.actors.Projectile` package. Additionally, the `BulletFactory.java` class was added to support the creation and management of various projectile types, enhancing efficiency and flexibility.
 
-### 5. Sound and Animation
+- **UI Class Merging:**
+  - The functionalities of `LevelViewLevelTwo.java` have been integrated into the new `LevelView.java` class, streamlining UI element management across different levels and reducing class redundancy.
 
-- **Sound Effects**: Includes shooting sounds, explosion sounds, and background music for each level.
-- **Animations**: Explosion animations for enemies and bosses, level-up effects for the player that follow the player's movement.
+## Detailed Change Descriptions
 
-### 6. Collision Detection
+### Added Java Classes
 
-- **CollisionComponent**: Handles detection between player, enemies, bullets, and power-ups.
+#### `MovementComponent` (Componentized Movement Management)
 
-### 7. Object Pooling
+**Location:** `com.example.demo.components.MovementComponent`
 
-- **Efficient Resource Management**: Uses object pools for projectiles to optimize performance.
+**Purpose and Functionality:**  
+The `MovementComponent` class manages the movement logic of Actors, including speed settings and position updates. By encapsulating movement logic within an independent component, it enables the reuse and independent management of movement functionalities.
 
----
+**Features:**
+- Set and get horizontal and vertical speed for Actors.
+- Update Actor's position based on speed.
+- Provide flexible movement control interfaces, supporting various movement modes.
 
-## Features with Issues
+#### `HealthComponent` (Componentized Health Management)
 
-The following features have been implemented but encountered issues:
+**Location:** `com.example.demo.components.HealthComponent`
 
-### 1. Boss Explosion Animation in Level Two
+**Purpose and Functionality:**  
+The `HealthComponent` class manages the health values of Actors, including initialization, reduction, and querying of health. By isolating health management into a separate component, it centralizes and reuses health logic across different Actors.
 
-- **Issue**: Upon defeating the boss in Level Two, the explosion animation does not play completely; it stops midway.
-- **Effect**: The game proceeds to Level Three after the boss defeat sound finishes, even though the animation hasn't completed.
-- **Current Status**: Adjustments were made to ensure the boss is not removed from the scene until the explosion animation finishes. However, the issue persists where the animation stops prematurely.
+**Features:**
+- Initialize maximum and current health values for Actors.
+- Provide `takeDamage(int damage)` method to reduce health.
+- Provide `heal(int amount)` method to increase health, up to maximum health.
+- Provide methods to get current and maximum health values.
+- Manage Actor's death state and trigger related logic.
 
-### 2. Shield Refreshing After Game Over
+#### `CollisionComponent` (Componentized Collision Detection)
 
-- **Issue**: After the player dies and the `GameOver` screen is displayed, the boss in Level Two continues to refresh and display shields.
-- **Effect**: Unwanted shield animations and potential resource leaks after the game has ended.
-- **Solution**: Modified `LevelTwo` to stop the shield refreshing `Timeline` when the player dies, ensuring that no further shield updates occur post `GameOver`.
+**Location:** `com.example.demo.components.CollisionComponent`
 
----
+**Purpose and Functionality:**  
+The `CollisionComponent` class manages collision detection logic for Actors, including the definition and updating of collision boxes. By encapsulating collision detection into a separate component, it enables reuse and centralized management of collision logic.
 
-## Unimplemented Features
+**Features:**
+- Define and initialize the size and position of an Actor's collision box.
+- Update the collision box position to match the Actor's current coordinates.
+- Provide methods to detect collisions with other objects.
+- Support various collision detection strategies.
 
-All required features have been implemented. No features remain unimplemented at this time.
+#### `ActorLevelUp` (Level-Up Power-Up)
 
----
+**Location:** `com.example.demo.actors.Actor.ActorLevelUp`
 
-## New Java Classes
+**Purpose and Functionality:**  
+The `ActorLevelUp` class represents a level-up power-up in the game. When collected by the player, it increases the player's firepower. This power-up moves in a sine wave pattern across the screen and is destroyed upon collection or moving out of the screen.
 
-The following Java classes were added to enhance functionality:
+**Features:**
+- **Movement Mode:** Moves leftward horizontally with a sine wave vertical oscillation, enhancing visual effects.
+- **Pickup Logic:** Increases player's firepower upon collection and plays a corresponding sound effect.
+- **Destruction Conditions:** Automatically destroyed upon being collected by the player or moving out of the screen, freeing resources.
+- **Sound Effects:** Plays a pickup sound to enhance user experience.
 
-### 1. `AnimationComponent` (in `com.example.demo.components` package)
+#### `HeartItem` (Health Restoration Power-Up)
 
-- **Function**: Manages animations such as explosions and level-up effects.
-- **Details**:
-  - Plays explosion animations for enemies and bosses.
-  - Supports callback functions to execute code after animations finish.
-  - Uses `Timeline` and `KeyFrame` for frame-based animations.
-  - **New Addition**: `playLevelUpRelative` method to allow level-up animations to follow the player's position.
-
-### 2. `SoundComponent` (in `com.example.demo.components` package)
-
-- **Function**: Manages all sound effects and music in the game.
-- **Details**:
-  - Plays background music for each level.
-  - Plays sound effects for shooting, explosions, boss defeats, power-up pickups, etc.
-  - Provides methods to stop and reset sounds as needed.
-
-### 3. `KeyBindings` (in `com.example.demo.utils` package)
-
-- **Function**: Allows customization of player control keys.
-- **Details**:
-  - Stores key bindings for movement controls (up, down, left, right).
-  - Can be extended to include more customizable actions.
-  - Singleton pattern ensures consistent key bindings throughout the game.
-
-### 4. `ShootingComponent` (in `com.example.demo.components` package)
-
-- **Function**: Manages shooting behavior for actors, including automatic firing.
-- **Details**:
-  - Handles firing rate, bullet spawning, and bullet pooling.
-  - Supports upgrades such as increased fire rate and extra bullet rows.
-  - Integrates with `SoundComponent` to play shooting sounds.
-
-### 5. `ActorLevelUp` and `HeartItem` (in `com.example.demo.actors` package)
-
-- **Function**: Represent collectible items for the player.
-- **Details**:
-  - `ActorLevelUp`: Power-up that upgrades the player's weapon.
-  - `HeartItem`: Restores player's health upon collection.
-  - Both move across the screen and can be collected by the player.
-
-### 6. `Shield` (in `com.example.demo.actors` package)
-
-- **Function**: Represents a shield that the boss can summon.
-- **Details**:
-  - Protects the boss from damage while active.
-  - Can be destroyed by the player's attacks.
-
-### 7. `ObjectPool<T>` (in `com.example.demo.utils` package)
-
-- **Function**: Generic object pool for managing reusable objects.
-- **Details**:
-  - Used to manage projectiles efficiently.
-  - Reduces overhead by reusing objects instead of creating new ones.
-
-### 8. `BulletFactory` (in `com.example.demo.actors.Projectile` package)
-
-- **Function**: Factory class for creating bullets/projectiles.
-- **Details**:
-  - Creates different types of projectiles based on owner (user, enemy, boss).
-  - Integrates with `ObjectPool` to manage projectile instances.
-
-### 9. `CollisionComponent` (in `com.example.demo.components` package)
-
-- **Function**: Handles collision detection between game objects.
-- **Details**:
-  - Defines hitboxes for actors.
-  - Provides methods to check for collisions with other actors.
-
----
-
-## Modified Java Classes
-
-The following Java classes were modified, along with reasons for modification:
-
-### 1. `LevelParent` (in `com.example.demo.levels` package)
-
-- **Modifications**:
-  - **Game Loop Enhancements**: Updated the game loop to support delta time for smoother animations.
-  - **Actor Management**:
-    - Implemented methods to manage adding and removing actors from the game scene.
-    - Modified `removeAllDestroyedActors` method to account for ongoing animations (e.g., boss explosion).
-  - **Collision Handling**:
-    - Integrated `CollisionComponent` for collision detection.
-    - Added handling for new power-up items (`ActorLevelUp`, `HeartItem`).
-  - **Input Processing**:
-    - Updated to use customizable key bindings from the `KeyBindings` class.
-    - Implemented `processInput` method to handle player input based on active keys.
-  - **Sound and Animation Integration**:
-    - Integrated `SoundComponent` and `AnimationComponent` for managing sounds and animations.
-  - **Game State Management**:
-    - Implemented methods `winGame` and `loseGame` to handle game state transitions.
-    - Added `isInputEnabled` flag to manage player input during transitions.
-
-- **Reason**: To support new features like custom controls, power-ups, advanced collision detection, and enhanced game state management.
-
-### 2. `UserPlane` (in `com.example.demo.actors` package)
-
-- **Modifications**:
-  - **Upgrades and Power-Ups**:
-    - Implemented methods to handle weapon upgrades and plane enhancements.
-    - Plane's appearance changes with upgrades.
-  - **Shooting Behavior**:
-    - Integrated `ShootingComponent` for automatic firing and managing fire rate.
-    - Supports extra bullet rows as an upgrade.
-  - **Movement Controls**:
-    - Updated movement methods to use customizable key bindings.
-    - Added methods to handle horizontal movement (left and right).
-  - **Animations**:
-    - Integrated `AnimationComponent` to play level-up animations when collecting power-ups.
-    - **New Change**: Level-up animations now follow the player's movement by being added as child nodes to the player's `Group`.
-  - **Health Management**:
-    - Adjusted to use a health component for better health management.
-
-- **Reason**: To enhance the player's experience with upgrades, automatic shooting, custom controls, and visual feedback.
-
-### 3. `Boss` (in `com.example.demo.actors` package)
-
-- **Modifications**:
-  - **Health Bar**:
-    - Added a health bar display above the boss.
-  - **Shield Mechanics**:
-    - Implemented the ability for the boss to summon a shield (`Shield` class).
-    - **New Change**: Added `stopShieldTimeline` method to allow external control of the shield refreshing timeline.
-  - **Shooting Behavior**:
-    - Integrated `ShootingComponent` for firing projectiles.
-  - **Explosion Animation**:
-    - Adjusted `destroy` method to play explosion animation using `AnimationComponent`.
-    - Added `isReadyToRemove` flag to prevent boss removal before animation completes.
-  - **Movement Pattern**:
-    - Enhanced movement with a move pattern and vertical velocity adjustments.
-    - Implemented random movement patterns to make the boss's actions less predictable.
-
-- **Reason**: To create a more challenging and engaging boss fight with proper visual feedback and unique behaviors, and to fix the bug where shields continued to refresh after game over.
-
-### 4. `LevelTwo` (in `com.example.demo.levels` package)
-
-- **Modifications**:
-  - **Boss Integration**:
-    - Adjusted to integrate the modified `Boss` class with new mechanics.
-    - Implemented `checkIfGameOver` to stop the boss's shield refreshing timeline upon player death.
-  - **Power-Up Spawning**:
-    - Added logic to spawn power-ups (`ActorLevelUp`, `HeartItem`) during the level.
-  - **Game State Handling**:
-    - Managed game state transitions to Level Three upon boss defeat.
-    - Ensured explosion animations and sounds are completed before proceeding.
-    - Added flags to synchronize the end of sounds and animations.
-  - **Bug Fix**:
-    - **New Addition**: In `checkIfGameOver`, added logic to stop the boss's shield refreshing timeline when the player dies to prevent shields from appearing post `GameOver`.
-
-- **Reason**: To accommodate the enhanced boss mechanics, provide a smooth transition between levels, and fix the shield refreshing bug after `GameOver`.
-
-### 5. `AnimationComponent` (in `com.example.demo.components` package)
-
-- **Modifications**:
-  - **New Method**: Added `playLevelUpRelative` to allow level-up animations to follow the player's position by adding them as child nodes to the player's `Group`.
-  - **Enhanced Functionality**:
-    - Ensured animations can be attached to any parent node, facilitating dynamic positioning.
-    - Modified existing animation methods to support relative positioning.
-
-- **Reason**: To enable level-up animations to follow the player's movement, enhancing visual feedback and preventing animations from remaining static when the player moves.
-
-### 6. `CollisionComponent` (in `com.example.demo.components` package)
-
-- **Modifications**:
-  - **Enhancements**:
-    - Improved collision checking logic to account for beneficial objects like `ActorLevelUp` and `HeartItem`.
-    - Ensured collision visualizations are accurately updated based on the actor's position.
-  
-- **Reason**: To support accurate and efficient collision detection with new power-up items and maintain game integrity.
-
-### 7. `Controller` (in `com.example.demo.controller` package)
-
-- **Modifications**:
-  - **Main Menu Management**:
-    - Ensured that upon transitioning to `GameOver`, all timelines and animations are properly stopped.
-    - Added logic to handle returning to the main menu cleanly without residual animations or timelines.
-
-- **Reason**: To manage game state transitions effectively and prevent unwanted behaviors post `GameOver`.
-
-### 8. `LevelOne` (in `com.example.demo.levels` package)
-
-- **Modifications**:
-  - **Dynamic Enemy Waves**:
-    - Enemies now spawn in waves of 3 (`ENEMIES_PER_SPAWN`).
-    - New waves are generated only when all enemies from the previous wave are destroyed.
-    - Ensured synchronization of enemy spawning to avoid premature wave creation.
-
-  - **Total Enemy Count**:
-    - Introduced `TOTAL_ENEMIES` to define the total number of enemies for the level.
-    - Removed the previous `KILLS_TO_ADVANCE` parameter to simplify level progression logic.
-
-  - **Enemy Spawn Probabilities**:
-    - Adjusted the spawn probabilities for different enemy types:
-      - **EnemyPlaneOne**: Higher probability of spawning.
-      - **EnemyPlaneTwo**: Lower probability of spawning.
-
-  - **Level Completion Logic**:
-    - Level transitions to `LevelTwo` only after all enemies (`TOTAL_ENEMIES`) have been eliminated, and no enemies remain on the screen.
-    - Added `checkIfGameOver` logic to handle seamless transition once all conditions are met.
-
-  - **Power-Up Spawning**:
-    - Integrated existing power-up logic without changes to probabilities.
-
-- **Reason**: To provide a more structured and intuitive enemy spawning system, ensuring controlled gameplay progression while maintaining balance and challenge.
-
-
----
+**Location:** `com.example.demo.actors.Actor.HeartItem`
+
+**Purpose and Functionality:**  
+The `HeartItem` class represents a health restoration power-up in the game. When collected by the player, it restores a certain amount of health. This power-up moves leftward horizontally with a sine wave vertical oscillation, enhancing visual effects.
+
+**Features:**
+- **Movement Mode:** Moves leftward horizontally with a sine wave vertical oscillation, enhancing visual appearance.
+- **Pickup Logic:** Restores a certain amount of health upon collection and plays a corresponding sound effect.
+- **Destruction Conditions:** Automatically destroyed upon being collected by the player or moving out of the screen, freeing resources.
+- **Sound Effects:** Plays a health pickup sound to enhance user experience.
+
+#### `BulletFactory` (Projectile Factory)
+
+**Location:** `com.example.demo.actors.Projectile.BulletFactory`
+
+**Purpose and Functionality:**  
+The `BulletFactory` class is used to create and reset different types of projectile objects, adhering to the factory design pattern. This factory supports the creation of user projectiles, enemy projectiles, and various Boss projectiles, facilitating dynamic generation and management of projectile objects in the game.
+
+**Features:**
+- **Projectile Creation:** Creates projectile objects based on specified types (e.g., "user", "enemy", "boss", "bossTwo").
+- **Projectile Resetting:** Provides methods to reset projectile objects for object pool reuse, enhancing game performance.
+- **Type Management:** Supports multiple projectile types, enabling flexible application across different game scenarios.
+- **Extensibility:** Easily add new projectile types to meet game expansion requirements.
+
+#### `MainMenu` (Main Menu)
+
+**Location:** `com.example.demo.ui.MainMenu`
+
+**Purpose and Functionality:**  
+The `MainMenu` class represents the main menu of the application, providing options to start the game, open settings, or exit the game. Through an intuitive user interface, it allows players to easily navigate to different game functionalities.
+
+**Features:**
+- **Background Management:**  
+  Sets the main menu's background image (`StartMenu.png`) to ensure visual consistency with the game theme.
+
+- **Button Creation:**  
+  Creates "Start Game", "Settings", and "Exit Game" buttons, providing corresponding operational functionalities. Buttons include hover effects to enhance user experience.
+
+- **Event Handling:**  
+  - **Start Game:** Calls the controller's `launchGame` method to initiate the game process.
+  - **Settings:** Displays the settings page, allowing players to adjust game settings.
+  - **Exit Game:** Calls the controller's `exitGame` method to safely exit the application.
+
+- **UI Layout:**  
+  Adds the background image and buttons to the root group and centers them, ensuring consistent layout across different screen sizes.
+
+#### `SettingsPage` (Settings Page)
+
+**Location:** `com.example.demo.ui.SettingsPage`
+
+**Purpose and Functionality:**  
+The `SettingsPage` class represents a user interface for managing game settings, including key bindings and volume controls. By providing intuitive controls, it allows players to customize their game experience.
+
+**Features:**
+- **Background Management:**  
+  Sets a semi-transparent black background to ensure the settings page content stands out visually.
+
+- **Title:**  
+  Displays the "Settings" title with white font and shadow effects to enhance readability.
+
+- **Volume Control:**  
+  - **BGM Volume:** Uses sliders to adjust background music volume, displaying the current volume percentage in real-time.
+  - **SFX Volume:** Uses sliders to adjust sound effects volume, displaying the current volume percentage in real-time.
+  - **Event Listeners:** Updates the `SoundComponent`'s volume settings and refreshes the displayed volume labels when slider values change.
+
+- **Key Bindings:**  
+  - **Key Buttons:** Creates buttons for "Up Key", "Down Key", "Left Key", and "Right Key", displaying the currently bound keys.
+  - **Key Binding Setup:** When buttons are clicked, a new window prompts the player to press a new key for binding. After keypress, the binding is updated and the button display is refreshed.
+
+- **Button Styling:**  
+  Creates buttons with transparent backgrounds and white text, adding shadow effects. Buttons change color and text color on hover to enhance interactivity.
+
+- **Back and Main Menu Buttons:**  
+  - **Back:** Returns to the previous interface, hiding the settings page.
+  - **Return to Main Menu:** Returns to the main menu, closing the settings page.
+
+- **UI Layout:**  
+  Uses vertical (`VBox`) and horizontal (`HBox`) box layouts to organize controls, ensuring the interface is clean and easy to navigate.
+
+#### `LevelThree` (Third Level)
+
+**Location:** `com.example.demo.levels.LevelThree.java`
+
+**Purpose and Functionality:**  
+The `LevelThree` class represents the third level of the game. This level introduces a powerful Boss enemy (`BossTwo`) and includes enhanced player abilities through power-ups and health restoration items. The level concludes when the Boss is defeated or the player is destroyed. It inherits from the `LevelParent` class to utilize shared level functionalities.
+
+**Change Summary:**
+1. **Class Location and Package Structure Adjustment:**  
+   - Moved from the `com.example.demo` package to the `com.example.demo.levels` package, aligning with the level management structure.
+
+2. **Boss Integration and Animation Optimization:**  
+   - Introduced `BossTwo` as the main enemy with complex shooting patterns and movement logic.
+   - Implemented Boss entrance animations to enhance visual effects and dynamism.
+
+3. **Enhanced Power-Up Generation Mechanism:**  
+   - Added `ActorLevelUp` and `HeartItem` as collectible power-ups to boost player firepower and restore health, respectively.
+   - Controlled the frequency of power-up generation through probability settings to maintain game balance and rarity.
+
+4. **Sound and Audio Management Optimization:**  
+   - Utilized `SoundComponent` to manage background music and specific event sound effects, such as Boss defeats and power-up pickups.
+   - Ensured synchronization between sound effects and game states to enhance player immersion.
+
+5. **Enhanced Level Objectives and UI Display:**  
+   - Added an `objectiveLabel` to display current level objectives, aiding players in understanding game tasks.
+   - Implemented dynamic updates to level objective texts, providing real-time feedback as the game progresses.
+
+6. **Pause and Settings Menu Integration:**  
+   - Added a pause button to allow players to access the settings menu during gameplay.
+   - Implemented game pause and resume logic, managing game timelines and sound effects accordingly.
+
+7. **Resource Cleanup and Management Optimization:**  
+   - Implemented a `cleanUp()` method to ensure proper resource release upon level completion, preventing memory leaks.
+   - Removed all animations, entities, and UI elements to ensure smooth transitions between levels.
+
+**Change Impact and Significance:**
+- Introduced Boss battles and power-up systems to significantly enhance game depth and challenge, enriching player experience.
+- Optimized animations and audio management to improve visual and auditory effects, boosting overall immersion.
+- Enhanced victory and defeat logic to ensure seamless game flow and comprehensive playability.
 
 ## Unexpected Issues and Solutions
 
@@ -396,14 +414,28 @@ The following Java classes were modified, along with reasons for modification:
   - **Modified**: Ensured that the game reads the latest key bindings from the `KeyBindings` class during the game loop.
   - **Outcome**: Key binding changes now take effect immediately without needing to restart the game, enhancing user experience and control flexibility.
 
----
+## Summary
 
-# License
+The primary focus of this refactoring and enhancement was to:
+
+1. **Reorganize Directory and Package Structure:**  
+   Moved class files to more logical packages (e.g., `actors`, `projectile`, `levels`, `ui`, `components`, `interfaces`, `utils`) to improve code readability and maintainability.
+
+2. **Componentization and Modularization:**  
+   Isolated movement, health, collision, shooting, animation, and sound logic into separate component classes to reduce coupling and increase code reusability.
+
+3. **Object Pooling and Factory Patterns:**  
+   Introduced object pooling (`ObjectPool`) and factory patterns (`ObjectFactory`, `BulletFactory`) to enhance performance and reduce memory consumption.
+
+4. **Unify and Streamline Class Responsibilities:**  
+   Consolidated scattered classes (e.g., `GameOverImage`, `WinImage`, `HeartDisplay`) into corresponding `ui` packages and provided unified management strategies for `LevelView`, `MainMenu`, `SettingsPage`, etc., enhancing modularity and maintainability.
+
+Through these changes, the project structure has become more organized, the codebase more extensible and maintainable, and the interaction between functional modules significantly reduced coupling, facilitating easier addition and modification of future features.
+
+## License
 
 This project is a coursework assignment for our institution. **Copying or plagiarizing any part of this project is strictly prohibited.**
 
 - You are welcome to **view the code** to learn and understand how the game is implemented.
 - Feel free to **download and play** the game for personal enjoyment.
 - **Unauthorized distribution** of the code or claiming it as your own work is not allowed.
-
----
